# github-api-json-id-aihw01-ai

./: .gitignore  Cargo.toml  README.md  flutter  requirements.txt
backend/: app.py  news_sources.json
frontend/: app.js  index.html  manifest.json  sw.js
mobile_app/: README.md  pubspec.yaml
mobile_app/android/app/: build.gradle.kts
mobile_app/android/app/src/main/kotlin/com/example/ai_news_app/: MainActivity.kt
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: main.dart
mobile_app/linux/: CMakeLists.txt
mobile_app/macos/Runner.xcodeproj/: project.pbxproj
mobile_app/macos/Runner/Configs/: AppInfo.xcconfig
mobile_app/windows/runner/: Runner.rc
src/: main.rs
