[package]
name = "aihw01"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1.5"
futures = "0.3"
once_cell = "1.21"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "net"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
